--- a/src/scss/_gallow.scss
+++ b/src/scss/_gallow.scss
@@ -1,8 +1,12 @@
 // Gallow //////////////////////////////////////////////////
 
 .drawing{
-    position: relative;
-    
+    padding: 20px 80px;
+
+    &__background{
+        position: relative;
+    }
+
     &__rope{
         height: 60px;
         width: 10px;
