--- a/src/scss/_keyboard.scss
+++ b/src/scss/_keyboard.scss
@@ -8,8 +8,6 @@
     display: flex;
     flex-direction: column;
 
-    
-
     &__key{
         text-align: center;
         width: 50px;
@@ -26,12 +24,12 @@
         border-radius: 3px;
         background-color: lightgrey;
 
-        &:hover /* :not(:disabled) */{
-            background-color: hsl(0, 0, 75%);
+        &:hover :not(:disabled){
+            background-color: hsl(0, 0%, 75%);
         }
-       /*  &:focus :not(:disabled){
+        &:focus :not(:disabled){
             background-color: hsl(50, 100%, 75%);
-        } */
+        }
         &-active{
             @extend .keyboard__key;
             background-color: lightslategray;
